// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`themes >> systemBottomSheet Should NOT render systemBottomSheet Should not render bottom sheet 1`] = `null`;

exports[`themes >> systemBottomSheet Should render systemBottomSheet box with no children Render snapshot correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(0,0,0,.5)",
        "bottom": 0,
        "display": "flex",
        "justifyContent": "flex-end",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 100,
      },
      Array [
        Object {},
      ],
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderTopLeftRadius": 16,
          "borderTopRightRadius": 16,
          "display": "flex",
          "flex": 1,
          "justifyContent": "flex-end",
          "paddingBottom": 8,
          "paddingTop": 24,
        },
        Array [
          Object {},
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "display": "flex",
            "marginBottom": 24,
            "marginTop": 24,
            "width": "90%",
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 8,
            "opacity": 1,
            "padding": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#282828",
                "display": "flex",
                "fontFamily": "SFUIText-Semibold",
                "fontSize": 16,
                "lineHeight": 24,
                "textAlign": "center",
              },
            ]
          }
        >
          CLOSE
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`themes >> systemBottomSheet Should render systemBottomSheet with children Should render bottom sheet with text 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(0,0,0,.5)",
        "bottom": 0,
        "display": "flex",
        "justifyContent": "flex-end",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 100,
      },
      Array [
        Object {},
      ],
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderTopLeftRadius": 16,
          "borderTopRightRadius": 16,
          "display": "flex",
          "flex": 1,
          "justifyContent": "flex-end",
          "paddingBottom": 8,
          "paddingTop": 24,
        },
        Array [
          Object {},
        ],
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "display": "flex",
          },
        ]
      }
    >
      Hi there
    </Text>
    <View
      style={
        Array [
          Object {
            "display": "flex",
            "marginBottom": 24,
            "marginTop": 24,
            "width": "90%",
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 8,
            "opacity": 1,
            "padding": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#282828",
                "display": "flex",
                "fontFamily": "SFUIText-Semibold",
                "fontSize": 16,
                "lineHeight": 24,
                "textAlign": "center",
              },
            ]
          }
        >
          CLOSE
        </Text>
      </View>
    </View>
  </View>
</View>
`;
